--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="icon" href="./applogo-192x192.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Adnan Wazwaz - Adnanian Order</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/applogo-180x180.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/applogo-152x152.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/applogo-144x144.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/applogo-120x120.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/applogo-114x114.png" />
-  <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/applogo-76x76.png" />
-  <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/applogo-57x57.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/applogo-180x180.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/applogo-152x152.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="/applogo-144x144.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="/applogo-120x120.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="/applogo-114x114.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="/applogo-76x76.png" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/applogo-57x57.png" />
 </head>
 
 <body>
